k8s/product-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
  namespace: istio-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product
          image: product:demo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 2
            periodSeconds: 5
