k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: istio-demo
spec:
  selector:
    app: frontend
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
