k8s/product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product
  namespace: istio-demo
spec:
  selector:
    app: product
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
