k8s/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: demo-gateway
  namespace: istio-demo
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend-vs
  namespace: istio-demo
spec:
  hosts:
    - "*"
  gateways:
    - demo-gateway
  http:
    - match:
        - uri:
            prefix: /slow
      rewrite:
        uri: /
      route:
        - destination:
            host: slow-service
            port:
              number: 5000
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: frontend.istio-demo.svc.cluster.local
            port:
              number: 5000
